syntax = "proto3";

message BetAction {
  int32 id = 1;
  string message = 2;
}
