syntax = "proto3";

message DirectionAction {
  int32 nt_type = 1;
  string token = 2;

  int64 table_id = 3;
  int64 bet_amount = 4;
}
